# cppLibraryTemplate

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Complex.h
myLib/: CMakeLists.txt
myLib/include/: myLib.h
myLib/src/: CMakeLists.txt  myLib.cpp
myLib/test/: CMakeLists.txt  test_myLib.cpp
src/: CMakeLists.txt  Complex.cpp
test/: CMakeLists.txt  test_myLib.cpp
